# ai2humanwork

./: .bankr-config.json  .env.example  .gitignore  .vercelignore  README.md  SUPABASE_ANTI_CHEAT_HARDENING_PATCH.sql  SUPABASE_ARTICLE_CONTEST_PATCH.sql  SUPABASE_ARTICLE_CONTEST_TEST_BYPASS_PATCH.sql  SUPABASE_CONTACT_EMAIL_PATCH.sql  SUPABASE_MIGRATION.sql  SUPABASE_POOL_ADDRESS_PATCH.sql  SUPABASE_PROFILE_SESSION_PATCH.sql  SUPABASE_RATELIMIT.sql  SUPABASE_X_ACCOUNT_UNIQUE_PATCH.sql  TESTING.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
acp-test/: README.md  buyer.mjs  package-lock.json  package.json  seller.mjs
app/: globals.css  landing.module.css  layout.tsx  page.tsx  rh-clone.module.css
b20-contracts/: .env.b20.example  .gitignore  DEPLOYMENTS.md  README.md  foundry.toml
data/: db.json  db.seed.json
docs/: AI2H_DESIGN_TOKENS.md  TRUSTNET_MVP.md  ai2human-network-architecture.html  ai2human-pitch.pptx  ai2human-solana-agent-talent-show-x-article.md  ai2human-x-article-rewrite.md  article-contest-readiness.md  article-review-models.md  bnb-live-settlement-proof.md  developer-api-key-requests.sql  fourmeme-final-submission.md  fourmeme-submission.md  hackathon-submission-form.md  reward-campaign-aeon-automation.md  (+6 more)
integrations/langchain-ai2human/: .gitignore  README.md  pyproject.toml
integrations/langchain-ai2human/examples/: direct_client.py  simple_agent.py
integrations/langchain-ai2human/langchain_ai2human/: __init__.py  client.py  toolkit.py  tools.py
integrations/langchain-ai2human/tests/: test_client.py
(+308 files in other folders)
