[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "langchain-ai2human"
version = "0.1.0"
description = "LangChain tools for dispatching reality-bound agent work to human operators."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI2Human" }]
keywords = ["ai agents", "langchain", "human verification", "task execution", "structured proof"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "httpx>=0.27,<1",
  "langchain-core>=1.0,<2",
  "pydantic>=2.7,<3"
]

[project.optional-dependencies]
test = ["pytest>=8,<10", "pytest-asyncio>=0.24,<2"]

[project.urls]
Homepage = "https://ai2human.io/developers"
Repository = "https://github.com/ai2humanagent/ai2humanwork"

[tool.hatch.build.targets.wheel]
packages = ["langchain_ai2human"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
